--- a/src/app.html
+++ b/src/app.html
@@ -12,5 +12,7 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<script src="/global.js"></script>
 	</body>
 </html>
